Cart component now updates to the DOM properly, added some styling with some overflow issues to iron out, added a totalPrice variable that adds the sum of all items in cart, will require a data-key with only an integer value to calculate properly

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,10 @@ a {
   text-decoration: inherit;
 }
 
+h4 {
+  margin: 0;
+}
+
 .App {
   display: flex;
   flex-direction: column;
@@ -119,9 +123,14 @@ a {
 
 #cart {
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  overflow: scroll;
+  margin: 5px 0;
+}
+
+.cart-items {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 #cart-items-list {
@@ -129,15 +138,21 @@ a {
   flex-direction: column;
   justify-content: space-around;
   width: 80%;
-  margin: 1% auto;
-  overflow: scroll;
-  height: 120px;
+  margin: 10px auto;
+  overflow: auto;
+  height: 150px;
   color: #F0EBD8;
 }
 
-.cart-items {
-  display: flex;
-  justify-content: space-between;
+#cart-items-price {
+  align-self: center;
+  color: #F0EBD8;
+  margin: 0 5px;
+}
+
+.cart-items-images {
+  width: 280px;
+  height: 120px;
 }
 
 #checkout-button {
@@ -162,7 +177,7 @@ a {
   justify-content: space-around;
   position: relative;
   width: 80%;
-  margin: 2% auto;
+  margin: 10px auto;
   padding: 30px 30px;
   overflow: scroll;
 
